<?xml version="1.0" encoding="utf-8"?>
<!-- Default (English) -->
<resources>

    <!-- App Stuff -->
    <string name="app_name">InEvent</string>

    <!-- Button Actions -->
    <string name="action_about">About</string>
    <string name="action_addPerson">Add Person</string>
    <string name="action_directions">Directions</string>
    <string name="action_displayOption_all">All activities</string>
    <string name="action_displayOption_schedule_approved">Schedule - Approved</string>
    <string name="action_displayOption_schedule_full">Schedule</string>
    <string name="action_displayOption_schedule_waitList">Schedule - Wait List</string>
    <string name="action_event_details">Event Details</string>
    <string name="action_event_enroll">Enroll</string>
    <string name="action_eventActivity_enroll">Enroll</string>
    <string name="action_eventActivity_managePeople">Manage People</string>
    <string name="action_eventActivity_questions">Questions</string>
    <string name="action_eventActivity_unenroll">Unenroll</string>
    <string name="action_location">Location</string>
    <string name="action_login">Login</string>
    <string name="action_myAccount">My Account</string>
    <string name="action_preferences">Preferences</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_signIn">Sign In</string>
    <string name="action_signOut">Sign Out</string>
    <string name="action_signUp">Register</string>

    <!-- Sliding Menu Buttons -->
    <string name="slidingMenu_events">Events</string>
    <string name="slidingMenu_login">Login</string>

    <!-- Titles -->
    <string name="title_about">About</string>
    <string name="title_addPerson">Add Person</string>
    <string name="title_appVersion">Version</string>
    <string name="title_description">Description</string>
    <string name="title_displayOption_all">All activities</string>
    <string name="title_displayOption_schedule_approved">My schedule - Approved</string>
    <string name="title_displayOption_schedule_full">My schedule</string>
    <string name="title_displayOption_schedule_waitList">My schedule - Wait List</string>
    <string name="title_general">General</string>
    <string name="title_location">Location</string>
    <string name="title_login">Login</string>
    <string name="title_mobileNetwork">Mobile Network</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_rate_activity">How did you like the activity?</string>
    <string name="title_rate_event">How did you like the event?</string>
    <string name="title_rating">Rating</string>
    <string name="title_signIn">Sign In</string>
    <string name="title_signUp">Sign Up</string>
    <string name="title_splashScreen">Splash Screen</string>
    <string name="title_yourAccount">Your Account</string>

    <!-- Hint Messages -->
    <string name="hint_addPerson_email">E-mail</string>
    <string name="hint_addPerson_name">Name</string>
    <string name="hint_member_myName">Me</string>
    <string name="hint_login_confirmPassword">Confirm Password</string>
    <string name="hint_login_email">E-mail</string>
    <string name="hint_login_name">Name</string>
    <string name="hint_login_password">Password</string>
    <string name="hint_login_university">University</string>
    <string name="hint_login_university_course">Course</string>
    <string name="hint_event_address">Address</string>
    <string name="hint_event_city">City</string>
    <string name="hint_event_description">No description</string>
    <string name="hint_event_name">Name</string>
    <string name="hint_event_state">State</string>
    <string name="hint_eventActivity_name">Name</string>
    <string name="hint_eventActivity_time">Time</string>
    <string name="hint_eventActivityQuestion_new">New question</string>
    <string name="hint_search">Search</string>

    <!-- Messages -->
    <string name="message_about_estudioTrilha">Estúdio Trilha</string>
    <string name="message_about_inEvent"><b>InEvent</b>, powered by</string>
    <string name="message_attender_absent">Absent</string>
    <string name="message_attender_present">Present</string>
    <string name="message_event_notEnrolled">You are not approved in this event</string>
    <string name="message_loginNecessary">Login first</string>

    <!-- Loading Messages -->
    <string name="loading_general">Loading…</string>
    <string name="loading_loggingIn">Logining In…</string>

    <!-- Empty Messages -->
    <string name="empty_event_description">No description</string>
    <string name="empty_event_location">Not specified</string>
    <string name="empty_eventActivities">Event activities will be shown here</string>
    <string name="empty_eventActivityAttenders">People enrolled for this activity will be displayed here</string>
    <string name="empty_eventActivityDescription">No description</string>
    <string name="empty_eventActivityQuestions">No questions</string>
    <string name="empty_eventList">Events will be displayed here</string>

    <!-- Preferences -->
    <string name="preference_useMobileNetwork">Use Mobile Network</string>

    <!-- Preferences Summaries -->

    <!-- Descriptions -->
    <string name="description_attendance_confirm">Confirm presence</string>
    <string name="description_attender_absent">Attender absent</string>
    <string name="description_attender_present">Attender present</string>
    <string name="description_event_approved">Person is approved in the event</string>
    <string name="description_event_cover">Event cover picture</string>
    <string name="description_event_info">Extra information about the event</string>
    <string name="description_preference_useMobileNetwork">Allow use of the mobile network to download data</string>
    <string name="description_question_send">Send question</string>
    <string name="description_question_upvote">Upvote this question</string>
    <string name="description_slidingMenu_close">Close sliding menu</string>
    <string name="description_slidingMenu_open">Open sliding menu</string>

    <!-- Error Messages -->
    <string name="error_conflict">Missing parameters</string>
    <string name="error_connection">Connection error</string>
    <string name="error_connection_internetless">No connection</string>
    <string name="error_connection_timeout">Connection timeout</string>
    <string name="error_internal">Some internal error occurred! Try again in a few moments</string>
    <string name="error_invalidEmail">Invalid e-mail address</string>
    <string name="error_login_badCredentials">Wrong name and/or password</string>
    <string name="error_login_emptyField">Field can\'t be empty</string>
    <string name="error_login_unmatchingPasswords">Non matching passwords</string>
    <string name="error_unauthorized">Unauthorized</string>

    <!-- Raw -->
    <string name="raw_time_at">at</string>

</resources>