<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:trilha="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_eventActivity_enroll"
        android:orderInCategory="5"
        android:title="@string/action_eventActivity_enroll"
        android:visible="false"
        trilha:showAsAction="never"/>
    <item
        android:id="@+id/action_eventActivity_unenroll"
        android:orderInCategory="5"
        android:title="@string/action_eventActivity_unenroll"
        android:visible="false"
        trilha:showAsAction="never"/>
    <item
        android:id="@+id/action_eventActivity_managePeople"
        android:icon="@drawable/ic_action_manage_people"
        android:orderInCategory="8"
        android:title="@string/action_eventActivity_managePeople"
        android:visible="false"
        trilha:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_location"
        android:icon="@drawable/ic_action_location_place"
        android:orderInCategory="1"
        android:title="@string/action_location"
        trilha:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_eventActivity_questions"
        android:icon="@drawable/ic_action_questions"
        android:orderInCategory="3"
        android:title="@string/action_eventActivity_questions"
        android:visible="false"
        trilha:showAsAction="ifRoom"/>

</menu>