<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/activity_base" />

    <ScrollView
        android:id="@+id/slidingMenu"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/slidingMenu_background" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- User Things -->

            <TextView
                style="@style/SlidingMenuItem.Section"
                android:text="@string/title_yourAccount" />

            <View
                style="@style/Divider.Horizontal"
                android:layout_height="2dp" />

            <Button
                android:id="@+id/slidingMenu_user"
                style="@style/SlidingMenuItem"
                android:onClick="user"
                android:text="@string/slidingMenu_login" />

            <!-- General Things -->

            <TextView
                style="@style/SlidingMenuItem.Section"
                android:text="@string/title_general" />

            <View
                style="@style/Divider.Horizontal"
                android:layout_height="2dp" />

            <Button
                android:id="@+id/slidingMenu_events"
                style="@style/SlidingMenuItem"
                android:onClick="events"
                android:text="@string/slidingMenu_events" />
        </LinearLayout>
    </ScrollView>

</android.support.v4.widget.DrawerLayout>