<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/about_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_splash" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:padding="@dimen/default_textPadding"
        android:text="@string/message_about_inEvent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/about_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/ic_logo_estudio_trilha"
        android:gravity="center_vertical"
        android:text="@string/message_about_estudioTrilha"
        android:textSize="22sp"
        android:textStyle="bold" />

</LinearLayout>