<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical" >

    <!-- TODO this view should become the event time -->

    <View
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="8dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="8dp" >

        <TextView
            android:id="@id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/hint_event_name"
            android:lines="1"
            android:maxLines="2"
            android:textColor="@android:color/black"
            android:textIsSelectable="false"
            android:textSize="22sp" />

        <TextView
            android:id="@id/event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/dark_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@id/event_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/hint_event_city"
            android:maxLines="1"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            android:textStyle="italic" />
    </LinearLayout>

    <ImageView
        android:id="@+id/event_info"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="top|right"
        android:layout_margin="4dp"
        android:clickable="true"
        android:contentDescription="@string/description_event_info"
        android:duplicateParentState="false"
        android:src="@drawable/ic_action_about" />

</LinearLayout>